--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vue/test-utils": "^1.2.1",
     "chai": "^4.3.4",
     "core-js": "^3.6.5",
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
