--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.3.4",
     "core-js": "^3.6.5",
     "electron-positioner": "^4.1.0",
+    "path": "^0.12.7",
     "sinon": "^11.1.1",
     "sinon-chai": "^3.7.0",
     "vue": "^2.6.11",
