--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron-positioner": "^4.1.0",
     "sinon": "^11.1.1",
     "sinon-chai": "^3.7.0",
+    "sqlite": "^4.0.23",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
@@ -39,7 +40,7 @@
     "chai": "^4.1.2",
     "electron": "^11.5.0",
     "electron-devtools-installer": "^3.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "mocha": "^9.1.2",
     "sass": "^1.32.0",
