--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint": "7.32.0",
     "eslint-plugin-vue": "^6.2.2",
     "mocha": "^9.1.3",
-    "sass": "^1.43.4",
+    "sass": "1.32",
     "sass-loader": "^10.2.0",
     "vue-cli-plugin-electron-builder": "^2.0.0",
     "vue-cli-plugin-vuetify": "~2.2.2",
