--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sinon-chai": "^3.7.0",
     "sqlite": "^4.0.23",
     "vue": "^2.6.14",
+    "vue-confetti": "^2.2.2",
     "vue-router": "^3.5.3",
     "vuetify": "^2.5.10",
     "vuex": "^3.6.2"
