--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
     "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
     "vue": "^2.6.14",
     "vue-confetti": "^2.2.2",
     "vue-router": "^3.5.3",
