--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.3.4",
     "core-js": "^3.19.0",
     "electron-positioner": "^4.1.0",
+    "express": "^4.17.2",
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
     "sqlite": "^4.0.23",
